fix size and centering

--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <title>LaTiS</title>
+<style>
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+</style>
 </head>
+
 <body>
-<img alt="logo" src="images/latis_logo_lines.png" align="middle">
+<div class="center">
+  <img alt="logo" src="images/latis_logo_lines.png" width="50%" height="50%" >
+</div>
 </body>
 </html>
